terraform/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-directory
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: employee-directory
  ports:
    - port: 80
      targetPort: 8080
